bindings/arduino/Proven.h


struct RGB {
    uint8_t r;
    uint8_t g;
    uint8_t b;
};