bindings/rust/src/ffi.rs


    /// Append to buffer.
    pub fn proven_buffer_append(
        buffer: *mut BoundedBuffer,
        ptr: *const u8,
        len: usize,
    ) -> i32;

    /// Get buffer contents.
    pub fn proven_buffer_get(
        buffer: *mut BoundedBuffer,
        out_ptr: *mut *const u8,
        out_len: *mut usize,
    ) -> i32;

    /// Free buffer.
    pub fn proven_buffer_free(buffer: *mut BoundedBuffer);

    // --- SafeRateLimiter (3 functions) ---

    /// Create rate limiter.
    pub fn proven_rate_limiter_create(capacity: f64, refill_rate: f64) -> *mut RateLimiter;

    /// Try to acquire tokens.
    pub fn proven_rate_limiter_try_acquire(limiter: *mut RateLimiter, tokens: f64) -> bool;

    /// Free rate limiter.
    pub fn proven_rate_limiter_free(limiter: *mut RateLimiter);

    // --- SafeCircuitBreaker (6 functions) ---

    /// Create circuit breaker.
    pub fn proven_circuit_breaker_create(
        failure_threshold: u32,
        success_threshold: u32,
        timeout_ms: i64,
    ) -> *mut CircuitBreaker;

    /// Check if request should be allowed.
    pub fn proven_circuit_breaker_allow(cb: *mut CircuitBreaker) -> bool;

    /// Record success.
    pub fn proven_circuit_breaker_success(cb: *mut CircuitBreaker);

    /// Record failure.
    pub fn proven_circuit_breaker_failure(cb: *mut CircuitBreaker);

    /// Get circuit state.
    pub fn proven_circuit_breaker_state(cb: *mut CircuitBreaker) -> CircuitState;

    /// Free circuit breaker.
    pub fn proven_circuit_breaker_free(cb: *mut CircuitBreaker);

    // --- SafeRetry (2 functions) ---

    /// Calculate delay for attempt.
    pub fn proven_retry_delay(config: RetryConfig, attempt: u32) -> u64;

    /// Check if should retry.
    pub fn proven_retry_should_retry(config: RetryConfig, attempt: u32) -> bool;

    // --- SafeMonotonic (3 functions) ---

    /// Create monotonic counter.
    pub fn proven_monotonic_create(initial: u64, max_value: u64) -> *mut MonotonicCounter;

    /// Get next value.
    pub fn proven_monotonic_next(counter: *mut MonotonicCounter) -> IntResult;

    /// Free counter.
    pub fn proven_monotonic_free(counter: *mut MonotonicCounter);

    // --- SafeStateMachine (5 functions) ---

    /// Create state machine.
    pub fn proven_state_machine_create(
        state_count: u32,
        initial_state: u32,
    ) -> *mut StateMachine;

    /// Allow transition.
    pub fn proven_state_machine_allow(sm: *mut StateMachine, from: u32, to: u32) -> bool;

    /// Try to transition.
    pub fn proven_state_machine_transition(sm: *mut StateMachine, to: u32) -> bool;

    /// Get current state.
    pub fn proven_state_machine_state(sm: *mut StateMachine) -> u32;

    /// Free state machine.
    pub fn proven_state_machine_free(sm: *mut StateMachine);

    // --- SafeTensor (5 functions) ---

    /// Create 2D tensor.
    pub fn proven_tensor_create(rows: usize, cols: usize) -> *mut Tensor2D;

    /// Set tensor value.
    pub fn proven_tensor_set(
        tensor: *mut Tensor2D,
        row: usize,
        col: usize,
        value: f64,
    ) -> i32;

    /// Get tensor value.
    pub fn proven_tensor_get(tensor: *mut Tensor2D, row: usize, col: usize) -> FloatResult;

    /// Matrix multiplication.
    pub fn proven_tensor_matmul(a: *mut Tensor2D, b: *mut Tensor2D) -> *mut Tensor2D;

    /// Free tensor.
    pub fn proven_tensor_free(tensor: *mut Tensor2D);

    // --- SafeML (5 functions) ---

    /// Softmax normalization.
    pub fn proven_ml_softmax(
        input: *const f64,
        output: *mut f64,
        len: usize,
    ) -> i32;

    /// Sigmoid function.
    pub fn proven_ml_sigmoid(x: f64) -> f64;

    /// ReLU function.
    pub fn proven_ml_relu(x: f64) -> f64;

    /// Leaky ReLU.
    pub fn proven_ml_leaky_relu(x: f64, alpha: f64) -> f64;

    /// Clamp value to range.
    pub fn proven_ml_clamp(x: f64, min_val: f64, max_val: f64) -> f64;

    // --- SafeLRU (4 functions) ---

    /// Create LRU cache.
    pub fn proven_lru_create(capacity: usize) -> *mut LRUCache;

    /// Get from LRU cache.
    pub fn proven_lru_get(cache: *mut LRUCache, key: u64) -> IntResult;

    /// Put in LRU cache.
    pub fn proven_lru_put(cache: *mut LRUCache, key: u64, value: i64) -> i32;

    /// Free LRU cache.
    pub fn proven_lru_free(cache: *mut LRUCache);

    // --- SafeGraph (4 functions) ---

    /// Create graph.
    pub fn proven_graph_create(node_count: usize) -> *mut Graph;

    /// Add edge.
    pub fn proven_graph_add_edge(graph: *mut Graph, from: usize, to: usize) -> i32;

    /// Check if edge exists.
    pub fn proven_graph_has_edge(graph: *mut Graph, from: usize, to: usize) -> bool;

    /// Free graph.
    pub fn proven_graph_free(graph: *mut Graph);

    // --- SafeQueue (5 functions) ---

    /// Create bounded queue.
    pub fn proven_queue_create(capacity: usize) -> *mut BoundedQueue;

    /// Push to queue.
    pub fn proven_queue_push(queue: *mut BoundedQueue, value: i64) -> bool;

    /// Pop from queue.
    pub fn proven_queue_pop(queue: *mut BoundedQueue) -> IntResult;

    /// Get queue size.
    pub fn proven_queue_size(queue: *mut BoundedQueue) -> usize;

    /// Free queue.
    pub fn proven_queue_free(queue: *mut BoundedQueue);

    // --- SafeBloom (4 functions) ---

    /// Create bloom filter.
    pub fn proven_bloom_create(
        expected_elements: usize,
        false_positive_rate: f64,
    ) -> *mut BloomFilter;

    /// Add element to bloom filter.
    pub fn proven_bloom_add(filter: *mut BloomFilter, ptr: *const u8, len: usize);

    /// Check if element might be in filter.
    pub fn proven_bloom_contains(filter: *mut BloomFilter, ptr: *const u8, len: usize) -> bool;

    /// Free bloom filter.
    pub fn proven_bloom_free(filter: *mut BloomFilter);

    // --- SafeRegistry (3 functions) ---

    /// Parse OCI image reference.
    pub fn proven_registry_parse(ptr: *const u8, len: usize) -> ImageRefResult;

    /// Convert image reference to string.
    pub fn proven_registry_to_string(reference: *const ImageReference) -> StringResult;

    /// Check if image reference has a registry hostname.
    pub fn proven_registry_has_registry(reference: *const ImageReference) -> BoolResult;

    // --- SafeDigest (3 functions) ---

    /// Parse digest string.
    pub fn proven_digest_parse(ptr: *const u8, len: usize) -> DigestResult;

    /// Constant-time digest comparison.
    pub fn proven_digest_verify(expected: *const Digest, actual: *const Digest) -> BoolResult;

    /// Convert digest to string.
    pub fn proven_digest_to_string(digest: *const Digest) -> StringResult;

    // --- SafeHTTP (3 functions) ---

    /// URL-encode a string.
    pub fn proven_http_url_encode(ptr: *const u8, len: usize) -> StringResult;

    /// URL-decode a string.
    pub fn proven_http_url_decode(ptr: *const u8, len: usize) -> StringResult;

    /// Parse WWW-Authenticate header.
    pub fn proven_http_parse_www_authenticate(
        ptr: *const u8,
        len: usize,
    ) -> AuthChallengeResult;

    // --- SafeColor (3 functions) ---

    /// Parse hex color string.
    pub fn proven_color_parse_hex(ptr: *const u8, len: usize) -> ColorParseResult;

    /// Convert RGB to HSL.
    pub fn proven_color_rgb_to_hsl(rgb: RGBColor) -> HSLColor;

    /// Format RGB as hex string.
    pub fn proven_color_to_hex(rgb: RGBColor) -> StringResult;

    // --- SafeAngle (4 functions) ---

    /// Convert degrees to radians.
    pub fn proven_angle_deg_to_rad(degrees: f64) -> f64;

    /// Convert radians to degrees.
    pub fn proven_angle_rad_to_deg(radians: f64) -> f64;

    /// Normalize angle to 0-360 degrees.
    pub fn proven_angle_normalize_degrees(degrees: f64) -> f64;

    /// Normalize angle to 0-2pi radians.
    pub fn proven_angle_normalize_radians(radians: f64) -> f64;

    // --- SafeUnit (2 functions) ---

    /// Convert length between units.
    pub fn proven_unit_convert_length(value: f64, from: LengthUnit, to: LengthUnit)
        -> FloatResult;

    /// Convert temperature between units.
    pub fn proven_unit_convert_temp(value: f64, from: TempUnit, to: TempUnit) -> FloatResult;

    // --- Callbacks (6 functions) ---

    /// Register a callback for a specific event type.
    pub fn proven_callback_register(
        event_type: ProvenEventType,
        callback: ProvenCallbackFn,
        context: *mut c_void,
    ) -> CallbackHandle;

    /// Unregister a callback by handle.
    pub fn proven_callback_unregister(handle: CallbackHandle) -> i32;

    /// Fire an event.
    pub fn proven_callback_fire(
        event_type: ProvenEventType,
        data_ptr: *const u8,
        data_len: usize,
        code: i32,
    ) -> i32;

    /// Query callback count for an event type.
    pub fn proven_callback_count(event_type: ProvenEventType) -> u32;

    /// Unregister all callbacks.
    pub fn proven_callback_clear_all() -> u32;
}
